--- a/shapes.ipynb
+++ b/shapes.ipynb
@@ -2672,6 +2672,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# This visualizes the first 100 shapes in the dataset\n",
+    "\n",
     "for idx, row in df.iterrows():\n",
     "    print(\"--------------------------------\")\n",
     "    print(row['shape'], '\\n')\n",
