use os library to iterate through files in game data folder

--- a/shapes.ipynb
+++ b/shapes.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str)\n",
+    "df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str) # Create a column that contains the shape matrix, applied to each row\n",
     "df.head()"
    ]
   },
@@ -513,6 +513,31 @@
     "print(tab1, '\\n')\n",
     "print(tab2, '\\n')\n",
     "print((tab1 + tab2).fillna(0).astype(int))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# This visualizes the first 100 shapes in the dataset\n",
+    "\n",
+    "for idx, row in df.iterrows():\n",
+    "    print(\"--------------------------------\")\n",
+    "    print(row['shape'], '\\n')\n",
+    "    # print(row['shape_matrix_str'])\n",
+    "    fig, ax = plt.subplots(figsize=(5, 2))\n",
+    "    sns.heatmap(row['shape_matrix'], annot=True, fmt=\"d\", cmap=\"binary\", ax=ax)\n",
+    "    plt.show()\n",
+    "    print(\"\\n\")\n",
+    "    if idx > 100:\n",
+    "        break\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -2670,21 +2695,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# This visualizes the first 100 shapes in the dataset\n",
-    "\n",
-    "for idx, row in df.iterrows():\n",
-    "    print(\"--------------------------------\")\n",
-    "    print(row['shape'], '\\n')\n",
-    "    # print(row['shape_matrix_str'])\n",
-    "    fig, ax = plt.subplots(figsize=(5, 2))\n",
-    "    sns.heatmap(row['shape_matrix'], annot=True, fmt=\"d\", cmap=\"binary\", ax=ax)\n",
-    "    plt.show()\n",
-    "    print(\"\\n\")\n",
-    "    if idx > 100:\n",
-    "        break\n",
     "\n",
     "# Iterate through all the participants in the dataset\n",
     "\n",
@@ -2693,7 +2703,11 @@
     "directory = os.fsencode(\"/Users/sarawu/Desktop/CAB/benchmarking-creativity/creative-foraging-human-data/Games\")\n",
     "\n",
     "for participant_file in os.listdir(directory):\n",
-    "    decode_shape_binaries_str()\n",
+    "    with open(participant_file, 'r') as f:\n",
+    "        df = pd.read_csv(f, sep=\"\\t\", header=None)\n",
+    "        df.columns = [\"shape\", \"timestamp\", \"timestamp_gallery\"]\n",
+    "        df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str)\n",
+    "\n",
     "\n",
     "# Create a thresholding algorithm that tags exploitaion and exploration phases\n",
     "# exploitation is when players' time intervals between consecutive choices to the gallery are decreasing\n",
