--- a/shapes.ipynb
+++ b/shapes.ipynb
@@ -2704,7 +2704,7 @@
     "        df = pd.read_csv(f, sep=\"\\t\", header=None)\n",
     "        df.columns = [\"shape\", \"timestamp\", \"timestamp_gallery\"]\n",
     "        df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str)\n",
-    "\n"
+    "        df['shape_matrix_str'] = df['shape'].apply(lambda x: \"\\n\".join([\"\".join(map(str, row)) for row in decode_shape_binaries_str(x)]))\n"
    ]
   },
   {
