update: add encode shape binaries function

--- a/shapes.ipynb
+++ b/shapes.ipynb
@@ -123,6 +123,9 @@
     "\n",
     "    return shape\n",
     "\n",
+    "\n",
+    "\n",
+    "    \n",
     "# Test with a single participant's game data\n",
     "# fp = \"/Users/sarawu/Desktop/CAB/benchmarking-creativity/creative-foraging-human-data/Games/20120613_122200.txt\"\n",
     "fp = \"/Users/ronaldr/Downloads/Creative Foraging Game Data 1.0/Games/20120613_122200.txt\"\n",
@@ -137,6 +140,57 @@
     "df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str) # Create a column that contains the shape matrix, applied to each row\n",
     "df['shape_matrix_str'] = df['shape'].apply(lambda x: \"\\n\".join([\"\".join(map(str, row)) for row in decode_shape_binaries_str(x)]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'512 448 896'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Function to reverse the decoding for the task instructions \n",
+    "def encode_shape_binaries(shape, bits=10):\n",
+    "    \"\"\"\n",
+    "    Encodes a 2D list (shape) of 0/1 bits into a single string of\n",
+    "    space-separated decimal codes. Each row in the shape becomes one code.\n",
+    "\n",
+    "    :param shape: A list of lists, where each sub-list is a row of bits (0's and 1's).\n",
+    "    :param bits: The fixed width of the binary representation (default=10).\n",
+    "    :return: A single string with space-separated decimal values.\n",
+    "    \"\"\"\n",
+    "    codes = []\n",
+    "    for row in shape:\n",
+    "        # Convert the list of bits into a single binary string\n",
+    "        binary_str = ''.join([str(bit) for bit in row])\n",
+    "\n",
+    "        # Convert the binary string to an integer\n",
+    "        number = int(binary_str, 2)\n",
+    "\n",
+    "        # Append the integer as a string to the list of codes\n",
+    "        codes.append(str(number))\n",
+    "\n",
+    "    # Join the list of codes into a single string with space separators\n",
+    "    return ' '.join(codes)\n",
+    "\n",
+    "encode_shape_binaries([[1,0,0,0,0,0,0,0,0,0], [0,1,1,1,0,0,0,0,0,0], [1,1,1,0,0,0,0,0,0,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -462,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-voids-aD7q7cFt-py3.12",
+   "display_name": "default_env",
    "language": "python",
    "name": "python3"
   },
@@ -925,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
