added function to validate move

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -33,12 +33,64 @@
     "import json\n",
     "import datetime\n",
     "\n",
+    "# Define a function to validate a move\n",
+    "def is_valid_move(shape, move_from, move_to):\n",
+    "    rows = len(shape)\n",
+    "    cols = len(shape[0])\n",
+    "    \n",
+    "    # Check if move_from and move_to are within bounds\n",
+    "    if not (0 <= move_from[0] < rows and 0 <= move_from[1] < cols):\n",
+    "        return False\n",
+    "    if not (0 <= move_to[0] < rows and 0 <= move_to[1] < cols):\n",
+    "        return False\n",
+    "    \n",
+    "    # Check if there is a square at move_from and no square at move_to\n",
+    "    if shape[move_from[0]][move_from[1]] == 0 or shape[move_to[0]][move_to[1]] == 1:\n",
+    "        return False\n",
+    "    \n",
+    "    # Check if move_from is not in the center\n",
+    "    center_row = rows // 2\n",
+    "    center_col = cols // 2\n",
+    "    if move_from == (center_row, center_col):\n",
+    "        return False\n",
+    "    \n",
+    "    # Check if move_to is adjacent to an existing square (not diagonally)\n",
+    "    adjacent_positions = [\n",
+    "        (move_to[0] - 1, move_to[1]),  # Up\n",
+    "        (move_to[0] + 1, move_to[1]),  # Down\n",
+    "        (move_to[0], move_to[1] - 1),  # Left\n",
+    "        (move_to[0], move_to[1] + 1)   # Right\n",
+    "    ]\n",
+    "    \n",
+    "    for pos in adjacent_positions:\n",
+    "        if 0 <= pos[0] < rows and 0 <= pos[1] < cols and shape[pos[0]][pos[1]] == 1:\n",
+    "            return True\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "# Example usage:\n",
+    "shape = [\n",
+    "    [1, 1, 1, 1, 1],\n",
+    "    [1, 1, 1, 1, 1],\n",
+    "    [0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0]\n",
+    "]\n",
+    "move_from = (0, 4)\n",
+    "move_to = (2, 2)\n",
+    "print(is_valid_move(shape, move_from, move_to))  # Output: False (not adjacent)\n",
+    "\n",
+    "move_from = (0, 4)\n",
+    "move_to = (1, 4)\n",
+    "print(is_valid_move(shape, move_from, move_to))  # Output: True (adjacent)\n",
+    "\n",
     "# Set your OpenAI API key\n",
     "# import openai\n",
     "# openai.api_key = 'XXXXXX'\n",
     "\n",
     "# Define a function to get a response from the OpenAI API\n",
     "def get_openai_response_fake(user_prompt, prompt):\n",
+    "    # use user_prompt as file_name to get the full game instructions\n",
     "    try:\n",
     "        prompt = {k:v for k,v in prompt.items() if v}  # Remove empty values from prompt (e.g., initial prompt)\n",
     "        input = {\n",
@@ -53,7 +105,7 @@
     "        output['last_shape'] = prompt.get('last_shape')\n",
     "        output['response'] = response\n",
     "        output['timestamp'] = datetime.datetime.now().isoformat()\n",
-    "        output['valid_move'] = True # Hardcoded, but need to write a function for checking\n",
+    "        output['valid_move'] = True # TODO Hardcoded, but need to write a function for checking\n",
     "        return output\n",
     "    except Exception as e:\n",
     "        return f\"An error occurred: {e}\"\n",
