update function with DFS

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -11,12 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate game moves"
+    "## Validate game moves\n",
+    "### Two checks to validate the move:\n",
+    "### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
+    "### 2. Check to make sure the change results in a contiguous shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29,74 +32,29 @@
     }
    ],
    "source": [
-    "# Define a function to validate a move\n",
-    "def is_valid_move(shape, move_from, move_to):\n",
-    "    rows = len(shape)\n",
-    "    cols = len(shape[0])\n",
-    "    \n",
-    "    # Check if move_from and move_to are within bounds\n",
-    "    if not (0 <= move_from[0] < rows and 0 <= move_from[1] < cols):\n",
-    "        return False\n",
-    "    if not (0 <= move_to[0] < rows and 0 <= move_to[1] < cols):\n",
-    "        return False\n",
-    "    \n",
-    "    # Check if there is a square at move_from and no square at move_to\n",
-    "    if shape[move_from[0]][move_from[1]] == 0 or shape[move_to[0]][move_to[1]] == 1:\n",
-    "        return False\n",
-    "    \n",
-    "    # Check if move_from is not in the center\n",
-    "    center_row = rows // 2\n",
-    "    center_col = cols // 2\n",
-    "    if move_from == (center_row, center_col):\n",
-    "        return False\n",
-    "    \n",
-    "    # Check if move_to is adjacent to an existing square (not diagonally)\n",
-    "    adjacent_positions = [\n",
-    "        (move_to[0] - 1, move_to[1]),  # Up\n",
-    "        (move_to[0] + 1, move_to[1]),  # Down\n",
-    "        (move_to[0], move_to[1] - 1),  # Left\n",
-    "        (move_to[0], move_to[1] + 1)   # Right\n",
+    "# Define a function to check that a square is valid to move.\n",
+    "# The function will take in the 10x10 grid and the coordinates of the square to be moved.\n",
+    "def is_valid_square(grid, coordinates):\n",
+    "    adjacent_squares = [\n",
+    "        coordinates[0] - 1, coordinates[1],\n",
+    "        coordinates[0] + 1, coordinates[1],\n",
+    "        coordinates[0], coordinates[1] - 1,\n",
+    "        coordinates[0], coordinates[1] + 1\n",
     "    ]\n",
     "    \n",
-    "    for pos in adjacent_positions:\n",
-    "        if 0 <= pos[0] < rows and 0 <= pos[1] < cols and shape[pos[0]][pos[1]] == 1:\n",
-    "            return True\n",
     "    \n",
-    "    return False\n",
     "\n",
-    "# Example usage:\n",
-    "shape = [\n",
-    "    [1, 1, 1, 1, 1],\n",
-    "    [1, 1, 1, 1, 1],\n",
-    "    [0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0]\n",
-    "]\n",
-    "move_from = (0, 4)\n",
-    "move_to = (2, 2)\n",
-    "print(is_valid_move(shape, move_from, move_to))  # Output: True (adjacent)\n",
-    "\n",
-    "move_from = (0, 4)\n",
-    "move_to = (1, 4)\n",
-    "print(is_valid_move(shape, move_from, move_to))  # Output: False (not adjacent)\n",
+    "# Define a function for check 2 using DFS.\n",
+    "# It takes in the 10x10 grid, the coordinates of a position on the grid, and the count through the grid.\n",
+    "# If the count = 10, the function will return True, indicating that the move is valid.\n",
+    "def dfs(graph, coordinates, count):\n",
+    "    # Identify whether the current coordinates indicate a 1 or 0 (a filled square or a blank)\n",
+    "    if graph[coordinates[0]][coordinates[1]] == 0:\n",
+    "        return 0\n",
+    "    sum_neighbors = sum(dfs())\n",
+    "    return sum_neighbors + 1\n",
+    "    \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "tt"
    ]
   },
   {
