finished contiguous shape function

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -19,14 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
       "False\n"
      ]
     }
@@ -41,18 +40,43 @@
     "        coordinates[0], coordinates[1] - 1,\n",
     "        coordinates[0], coordinates[1] + 1\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    \n",
     "\n",
     "# Define a function for check 2 using DFS.\n",
     "# It takes in the 10x10 grid, the coordinates of a position on the grid, and the count through the grid.\n",
     "# If the count = 10, the function will return True, indicating that the move is valid.\n",
-    "def dfs(graph, coordinates, count):\n",
-    "    # Identify whether the current coordinates indicate a 1 or 0 (a filled square or a blank)\n",
-    "    if graph[coordinates[0]][coordinates[1]] == 0:\n",
-    "        return 0\n",
-    "    sum_neighbors = sum(dfs())\n",
-    "    return sum_neighbors + 1\n",
+    "def is_contiguous(shape, start):\n",
+    "    rows = len(shape)\n",
+    "    cols = len(shape[0])\n",
+    "    visited = set()\n",
+    "    \n",
+    "    def dfs(r, c):\n",
+    "        if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or shape[r][c] == 0:\n",
+    "            return 0\n",
+    "        visited.add((r, c))\n",
+    "        count = 1\n",
+    "        for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]:\n",
+    "            count += dfs(r + dr, c + dc)\n",
+    "        return count\n",
+    "    \n",
+    "    return dfs(start[0], start[1]) == 10\n",
+    "\n",
+    "# Example usage:\n",
+    "shape = [\n",
+    "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+    "    [1, 0, 1, 1, 1, 0, 0, 0, 0, 1],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "]\n",
+    "start = (0, 0)\n",
+    "print(is_contiguous(shape, start))  # Output: True\n",
     "    \n",
     "\n"
    ]
