function to check if square can be moved

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -41,6 +41,12 @@
     "        coordinates[0], coordinates[1] + 1\n",
     "    ]\n",
     "\n",
+    "    for pos in adjacent_squares:\n",
+    "         if grid[adjacent_squares[0]][adjacent_squares[1]] == 0:\n",
+    "            return True\n",
+    "    return False\n",
+    "    \n",
+    "\n",
     "    \n",
     "\n",
     "# Define a function for check 2 using DFS.\n",
