tested when number of 1s > 10

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
     "# Example usage:\n",
     "shape = [\n",
     "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-    "    [1, 0, 1, 1, 1, 0, 0, 0, 0, 1],\n",
+    "    [1, 0, 1, 1, 1, 1, 1, 0, 0, 1],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
@@ -82,7 +82,7 @@
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "]\n",
     "start = (0, 0)\n",
-    "print(is_contiguous(shape, start))  # Output: True\n",
+    "print(is_contiguous(shape, start))  \n",
     "    \n",
     "\n"
    ]
