--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -61,8 +61,8 @@
     "        if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or shape[r][c] == 0:\n",
     "            return 0\n",
     "        visited.add((r, c))\n",
-    "        count = 1\n",
-    "        for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]:\n",
+    "        count = 1 \n",
+    "        for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]: # Check all 4 directions\n",
     "            count += dfs(r + dr, c + dc)\n",
     "        return count\n",
     "    \n",
