--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -41,10 +41,44 @@
     "        coordinates[0], coordinates[1] + 1\n",
     "    ]\n",
     "\n",
-    "    for pos in adjacent_squares:\n",
-    "         if grid[adjacent_squares[0]][adjacent_squares[1]] == 0:\n",
-    "            return True\n",
+    "    if grid[coordinates[0]][coordinates[1]] == 1: # First check to make sure the coordinates correspond to a 1\n",
+    "        for pos in adjacent_squares: # If so, then check if any of the adjacent squares are 0\n",
+    "            if grid[adjacent_squares[0]][adjacent_squares[1]] == 0:\n",
+    "                return True\n",
     "    return False\n",
+    "\n",
+    "# Example usage\n",
+    "grid = [\n",
+    "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+    "    [1, 0, 0, 1, 1, 1, 1, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "]\n",
+    "coordinates = (1,5)\n",
+    "print(is_valid_square(grid, coordinates)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "    \n",
     "\n",
     "    \n",
