function to make sure there is exactly one change between previous and new shape. Can these functions be combined?

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -66,7 +66,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "    \n",
+    "# Define a function for check 2 using DFS.\n",
+    "# It takes in the 10x10 grid and the coordinates of a starting point on the shape.\n",
+    "# If the count = 10, the function will return True, indicating that the move is valid.\n",
+    "def is_contiguous(grid, start):\n",
+    "    rows = len(grid)\n",
+    "    cols = len(grid[0])\n",
+    "    visited = set()\n",
+    "    \n",
+    "    def dfs(r, c):\n",
+    "        if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or grid[r][c] == 0:\n",
+    "            return 0\n",
+    "        visited.add((r, c))\n",
+    "        count = 1 \n",
+    "        for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]: # Check all 4 directions\n",
+    "            count += dfs(r + dr, c + dc)\n",
+    "        return count\n",
+    "    \n",
+    "    return dfs(start[0], start[1]) == 10\n",
+    "\n",
+    "# Example usage:\n",
+    "grid = [\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 1, 1, 1, 1, 1, 1, 1],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "]\n",
+    "start = (1, 3)\n",
+    "print(is_contiguous(grid, start))  \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -78,36 +132,34 @@
     }
    ],
    "source": [
+    "# Define a function to check that there is exactly one change between the previous shape and the new shape.\n",
     "\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "\n",
-    "# Define a function for check 2 using DFS.\n",
-    "# It takes in the 10x10 grid, the coordinates of a position on the grid, and the count through the grid.\n",
-    "# If the count = 10, the function will return True, indicating that the move is valid.\n",
-    "def is_contiguous(shape, start):\n",
-    "    rows = len(shape)\n",
-    "    cols = len(shape[0])\n",
-    "    visited = set()\n",
-    "    \n",
-    "    def dfs(r, c):\n",
-    "        if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or shape[r][c] == 0:\n",
-    "            return 0\n",
-    "        visited.add((r, c))\n",
-    "        count = 1 \n",
-    "        for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]: # Check all 4 directions\n",
-    "            count += dfs(r + dr, c + dc)\n",
-    "        return count\n",
-    "    \n",
-    "    return dfs(start[0], start[1]) == 10\n",
+    "def is_one_change(grid1, grid2):\n",
+    "    count = 0\n",
+    "    for i in range(len(grid1)):\n",
+    "        for j in range(len(grid1[0])):\n",
+    "            if grid1[i][j] != grid2[i][j]:\n",
+    "                count += 1\n",
+    "    return count == 1\n",
     "\n",
     "# Example usage:\n",
-    "shape = [\n",
-    "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-    "    [1, 0, 1, 1, 1, 1, 1, 0, 0, 1],\n",
+    "grid1 = [\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 1, 1, 1, 1, 1, 1, 1],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "]\n",
+    "grid2 = [     \n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 1, 1, 1, 1, 1, 1, 0],\n",
+    "    [0, 0, 0, 0, 0, 1, 0, 0, 1, 0],\n",
+    "    [0, 0, 0, 0, 1, 1, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
@@ -115,10 +167,7 @@
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "]\n",
-    "start = (0, 0)\n",
-    "print(is_contiguous(shape, start))  \n",
-    "    \n",
-    "\n"
+    "print(is_one_change(grid1, grid2)) "
    ]
   },
   {
