--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -12,14 +12,16 @@
    "metadata": {},
    "source": [
     "## Validate game moves\n",
-    "### Two checks to validate the move:\n",
-    "### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
-    "### 2. Check to make sure the change results in a contiguous shape"
+    "### Three checks to validate the move:\n",
+    "#### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
+    "### For the new shape:\n",
+    "#### 2. Check to make sure the change results in a contiguous shape\n",
+    "#### 3. Check that there was only one change between previous and new shape."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +109,7 @@
     "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
@@ -115,12 +117,12 @@
     "start = (1, 3)\n",
     "print(is_contiguous(grid, start))  \n",
     "    \n",
-    "\n"
+    "# separate rule that sums the number of 1s in the grid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -168,6 +170,20 @@
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "]\n",
     "print(is_one_change(grid1, grid2)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integration of the three functions to check if a move is valid.\n",
+    "\n",
+    "def is_valid_move(grid1, grid2, start):\n",
+    "    if is_contiguous(grid2, start) and is_one_change(grid1, grid2):\n",
+    "        return is_valid_square(grid1, start)\n",
+    "    return False"
    ]
   },
   {
