more comment updates

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -12,11 +12,12 @@
    "metadata": {},
    "source": [
     "## Validate game moves\n",
-    "### Three checks to validate the move:\n",
+    "### Four checks to validate the move:\n",
     "#### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
     "### For the new shape:\n",
-    "#### 2. Check to make sure the change results in a contiguous shape\n",
-    "#### 3. Check that there was only one change between previous and new shape."
+    "#### 2. Count to check that there are exactly 10 1's.\n",
+    "#### 3. Check to make sure the change results in a contiguous shape\n",
+    "#### 4. Check that there was only one change between previous and new shape."
    ]
   },
   {
