--- a/data-combined.ipynb
+++ b/data-combined.ipynb
@@ -136,6 +136,112 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>timestamp_gallery</th>\n",
+       "      <th>next_shape</th>\n",
+       "      <th>shape_matrix</th>\n",
+       "      <th>shape_matrix_str</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1023</td>\n",
+       "      <td>15.712</td>\n",
+       "      <td></td>\n",
+       "      <td>1023</td>\n",
+       "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
+       "      <td>1111111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1023</td>\n",
+       "      <td>16.927</td>\n",
+       "      <td>31.45</td>\n",
+       "      <td>512 1022</td>\n",
+       "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
+       "      <td>1111111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>512 1022</td>\n",
+       "      <td>72.191</td>\n",
+       "      <td></td>\n",
+       "      <td>512 1020 4</td>\n",
+       "      <td>[[1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...</td>\n",
+       "      <td>1000000000\\n1111111110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>512 1020 4</td>\n",
+       "      <td>74.190</td>\n",
+       "      <td></td>\n",
+       "      <td>256 1020 4</td>\n",
+       "      <td>[[1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...</td>\n",
+       "      <td>1000000000\\n1111111100\\n0000000100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>256 1020 4</td>\n",
+       "      <td>83.084</td>\n",
+       "      <td></td>\n",
+       "      <td>256 1020 8</td>\n",
+       "      <td>[[0, 1, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...</td>\n",
+       "      <td>0100000000\\n1111111100\\n0000000100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        shape  timestamp timestamp_gallery  next_shape  \\\n",
+       "0        1023     15.712                          1023   \n",
+       "1        1023     16.927             31.45    512 1022   \n",
+       "2    512 1022     72.191                    512 1020 4   \n",
+       "3  512 1020 4     74.190                    256 1020 4   \n",
+       "4  256 1020 4     83.084                    256 1020 8   \n",
+       "\n",
+       "                                        shape_matrix  \\\n",
+       "0                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+       "1                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+       "2  [[1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...   \n",
+       "3  [[1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...   \n",
+       "4  [[0, 1, 0, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, ...   \n",
+       "\n",
+       "                     shape_matrix_str  \n",
+       "0                          1111111111  \n",
+       "1                          1111111111  \n",
+       "2              1000000000\\n1111111110  \n",
+       "3  1000000000\\n1111111100\\n0000000100  \n",
+       "4  0100000000\\n1111111100\\n0000000100  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -149,9 +255,14 @@
     "print(df.shape)\n",
     "display(df.head())\n",
     "\n",
+    "# Get next move\n",
+    "df['next_shape'] = df['shape'].shift(-1)\n",
+    "\n",
     "# Decode the shape binaries\n",
     "df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str) # Create a column that contains the shape matrix, applied to each row\n",
-    "df['shape_matrix_str'] = df['shape'].apply(lambda x: \"\\n\".join([\"\".join(map(str, row)) for row in decode_shape_binaries_str(x)]))"
+    "df['shape_matrix_str'] = df['shape'].apply(lambda x: \"\\n\".join([\"\".join(map(str, row)) for row in decode_shape_binaries_str(x)]))\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
@@ -163,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32319, 6)\n"
+      "(32319, 7)\n"
      ]
     },
     {
@@ -197,6 +308,7 @@
        "      <th>shape</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>timestamp_gallery</th>\n",
+       "      <th>next_shape</th>\n",
        "      <th>game_file</th>\n",
        "      <th>shape_matrix</th>\n",
        "      <th>shape_matrix_str</th>\n",
@@ -208,6 +320,7 @@
        "      <td>1023</td>\n",
        "      <td>16.038</td>\n",
        "      <td></td>\n",
+       "      <td>1023</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
        "      <td>1111111111</td>\n",
@@ -217,6 +330,7 @@
        "      <td>1023</td>\n",
        "      <td>17.168</td>\n",
        "      <td>29.650000000000002</td>\n",
+       "      <td>2 1022</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
        "      <td>1111111111</td>\n",
@@ -226,6 +340,7 @@
        "      <td>2 1022</td>\n",
        "      <td>76.165</td>\n",
        "      <td></td>\n",
+       "      <td>4 1020 512</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...</td>\n",
        "      <td>0000000010\\n1111111110</td>\n",
@@ -235,6 +350,7 @@
        "      <td>4 1020 512</td>\n",
        "      <td>79.600</td>\n",
        "      <td></td>\n",
+       "      <td>4 1020 256</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...</td>\n",
        "      <td>0000000100\\n1111111100\\n1000000000</td>\n",
@@ -244,6 +360,7 @@
        "      <td>4 1020 256</td>\n",
        "      <td>81.315</td>\n",
        "      <td></td>\n",
+       "      <td>520 1016 512</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...</td>\n",
        "      <td>0000000100\\n1111111100\\n0100000000</td>\n",
@@ -253,19 +370,19 @@
        "</div>"
       ],
       "text/plain": [
-       "        shape  timestamp   timestamp_gallery            game_file  \\\n",
-       "0        1023     16.038                      20120513_091629.txt   \n",
-       "1        1023     17.168  29.650000000000002  20120513_091629.txt   \n",
-       "2      2 1022     76.165                      20120513_091629.txt   \n",
-       "3  4 1020 512     79.600                      20120513_091629.txt   \n",
-       "4  4 1020 256     81.315                      20120513_091629.txt   \n",
+       "        shape  timestamp   timestamp_gallery    next_shape  \\\n",
+       "0        1023     16.038                              1023   \n",
+       "1        1023     17.168  29.650000000000002        2 1022   \n",
+       "2      2 1022     76.165                        4 1020 512   \n",
+       "3  4 1020 512     79.600                        4 1020 256   \n",
+       "4  4 1020 256     81.315                      520 1016 512   \n",
        "\n",
-       "                                        shape_matrix  \\\n",
-       "0                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
-       "1                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
-       "2  [[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...   \n",
-       "3  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
-       "4  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
+       "             game_file                                       shape_matrix  \\\n",
+       "0  20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+       "1  20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+       "2  20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...   \n",
+       "3  20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
+       "4  20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
        "\n",
        "                     shape_matrix_str  \n",
        "0                          1111111111  \n",
@@ -290,6 +407,7 @@
     "    with open(\"creative-foraging-human-data/Games/\"+participant_file, 'r') as f:\n",
     "        df = pd.read_csv(f, sep=\"\\t\", header=None)\n",
     "        df.columns = [\"shape\", \"timestamp\", \"timestamp_gallery\"]\n",
+    "        df['next_shape'] = df['shape'].shift(-1)\n",
     "        df['game_file'] = participant_file\n",
     "        df['shape_matrix'] = df['shape'].apply(decode_shape_binaries_str)\n",
     "        df['shape_matrix_str'] = df['shape'].apply(lambda x: \"\\n\".join([\"\".join(map(str, row)) for row in decode_shape_binaries_str(x)]))\n",
@@ -306,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default_env",
+   "display_name": "data-voids-aD7q7cFt-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
