--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -22,6 +22,254 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shape</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>timestamp_gallery</th>\n",
+       "      <th>next_shape</th>\n",
+       "      <th>game_file</th>\n",
+       "      <th>shape_matrix</th>\n",
+       "      <th>shape_matrix_str</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1023</td>\n",
+       "      <td>16.038</td>\n",
+       "      <td></td>\n",
+       "      <td>1023</td>\n",
+       "      <td>20120513_091629.txt</td>\n",
+       "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
+       "      <td>1111111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1023</td>\n",
+       "      <td>17.168</td>\n",
+       "      <td>29.650000000000002</td>\n",
+       "      <td>2 1022</td>\n",
+       "      <td>20120513_091629.txt</td>\n",
+       "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
+       "      <td>1111111111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2 1022</td>\n",
+       "      <td>76.165</td>\n",
+       "      <td></td>\n",
+       "      <td>4 1020 512</td>\n",
+       "      <td>20120513_091629.txt</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...</td>\n",
+       "      <td>0000000010\\n1111111110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4 1020 512</td>\n",
+       "      <td>79.600</td>\n",
+       "      <td></td>\n",
+       "      <td>4 1020 256</td>\n",
+       "      <td>20120513_091629.txt</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...</td>\n",
+       "      <td>0000000100\\n1111111100\\n1000000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4 1020 256</td>\n",
+       "      <td>81.315</td>\n",
+       "      <td></td>\n",
+       "      <td>520 1016 512</td>\n",
+       "      <td>20120513_091629.txt</td>\n",
+       "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...</td>\n",
+       "      <td>0000000100\\n1111111100\\n0100000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        shape  timestamp   timestamp_gallery    next_shape  \\\n",
+       "0        1023     16.038                              1023   \n",
+       "1        1023     17.168  29.650000000000002        2 1022   \n",
+       "2      2 1022     76.165                        4 1020 512   \n",
+       "3  4 1020 512     79.600                        4 1020 256   \n",
+       "4  4 1020 256     81.315                      520 1016 512   \n",
+       "\n",
+       "             game_file                                       shape_matrix  \\\n",
+       "0  20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+       "1  20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
+       "2  20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...   \n",
+       "3  20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
+       "4  20120513_091629.txt  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...   \n",
+       "\n",
+       "                     shape_matrix_str  \n",
+       "0                          1111111111  \n",
+       "1                          1111111111  \n",
+       "2              0000000010\\n1111111110  \n",
+       "3  0000000100\\n1111111100\\n1000000000  \n",
+       "4  0000000100\\n1111111100\\n0100000000  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/all-games.tsv', sep='\\t')\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add a column to the human data file that contains that shape code for the next move's shape. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1023', '1023']\n",
+      "['1023', '2 1022']\n",
+      "['2 1022', '4 1020 512']\n",
+      "['4 1020 512', '4 1020 256']\n",
+      "['4 1020 256', '520 1016 512']\n",
+      "['520 1016 512', '528 1016 512']\n",
+      "['528 1016 512', '544 1016 512']\n",
+      "['544 1016 512', '576 1016 512']\n",
+      "['576 1016 512', '576 1008 528']\n",
+      "['576 1008 528', '576 1008 544']\n",
+      "['576 1008 544', '576 1008 288']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, row in df.iterrows():\n",
+    "    if idx > 10:\n",
+    "        break\n",
+    "    print(row[['shape','next_shape']].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def decode_shape_binaries_str(encoded_str, bits=10):\n",
+    "    \"\"\"\n",
+    "    Decodes a single string of space-separated decimal codes into\n",
+    "    a 2D list (shape) of 0/1 bits. Each code becomes one row in the shape.\n",
+    "\n",
+    "    :param encoded_str: A single string with space-separated decimal values\n",
+    "                        (e.g., \"1016 64 64 64\").\n",
+    "    :param bits: The fixed width of the binary representation (default=10).\n",
+    "    :return: A list of lists, where each sub-list is a row of bits (0's and 1's).\n",
+    "    \"\"\"\n",
+    "    # Split the string by spaces to get each code as a separate token\n",
+    "    codes = encoded_str.split()\n",
+    "\n",
+    "    shape = []\n",
+    "    for code in codes:\n",
+    "        # Convert the code (string) to an integer\n",
+    "        number = int(code)\n",
+    "\n",
+    "        # Convert to binary, left-padded with zeros to the desired bit length\n",
+    "        binary_str = format(number, 'b').rjust(bits, '0')\n",
+    "\n",
+    "        # Convert the binary string into a list of integer bits (0 or 1)\n",
+    "        row_of_bits = [int(bit) for bit in binary_str]\n",
+    "        shape.append(row_of_bits)\n",
+    "\n",
+    "    return shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111111111\n",
+      "----------------------\n",
+      "1111111111\n",
+      "=======================\n",
+      "1111111111\n",
+      "----------------------\n",
+      "0000000010\n",
+      "1111111110\n",
+      "=======================\n",
+      "0000000010\n",
+      "1111111110\n",
+      "----------------------\n",
+      "0000000100\n",
+      "1111111100\n",
+      "1000000000\n",
+      "=======================\n",
+      "0000000100\n",
+      "1111111100\n",
+      "1000000000\n",
+      "----------------------\n",
+      "0000000100\n",
+      "1111111100\n",
+      "0100000000\n",
+      "=======================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, row in df.iterrows():\n",
+    "    if idx > 3:\n",
+    "        break\n",
+    "    shape = decode_shape_binaries_str(row['shape'])\n",
+    "    shape_matrix = \"\\n\".join([\"\".join(map(str, line)) for line in shape]) \n",
+    "    print(shape_matrix)\n",
+    "    print('----------------------')\n",
+    "\n",
+    "    next_shape = decode_shape_binaries_str(row['next_shape'])\n",
+    "    next_shape_matrix = \"\\n\".join([\"\".join(map(str, line)) for line in next_shape]) \n",
+    "    print(next_shape_matrix)\n",
+    "    print('=======================')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -83,25 +331,26 @@
    "source": [
     "\n",
     "    \n",
-    "# Define a function for check 2 using DFS.\n",
+    "# Define a function to check continuity using DFS. Do not execute the search if the total number of 1s is not 10.\n",
     "# It takes in the 10x10 grid and the coordinates of a starting point on the shape.\n",
     "# If the count = 10, the function will return True, indicating that the move is valid.\n",
     "def is_contiguous(grid, start):\n",
     "    rows = len(grid)\n",
     "    cols = len(grid[0])\n",
     "    visited = set()\n",
-    "    \n",
-    "    def dfs(r, c):\n",
-    "        if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or grid[r][c] == 0:\n",
-    "            return 0\n",
-    "        visited.add((r, c))\n",
-    "        count = 1 \n",
-    "        for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]: # Check all 4 directions\n",
-    "            count += dfs(r + dr, c + dc)\n",
-    "        return count\n",
-    "    \n",
-    "    return dfs(start[0], start[1]) == 10\n",
     "\n",
+    "    if sum(sum(row) for row in grid) != 10:  \n",
+    "        def dfs(r, c):\n",
+    "            if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or grid[r][c] == 0:\n",
+    "                return 0\n",
+    "            visited.add((r, c))\n",
+    "            count = 1 \n",
+    "            for dr, dc in [(-1, 0), (1, 0), (0, -1), (0, 1)]: # Check all 4 directions\n",
+    "                count += dfs(r + dr, c + dc)\n",
+    "            return count\n",
+    "        \n",
+    "        return dfs(start[0], start[1]) == 10\n",
+    "    return False\n",
     "# Example usage:\n",
     "grid = [\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
@@ -174,12 +423,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Integration of the above functions to check if a move is valid.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integration of the three functions to check if a move is valid.\n",
     "\n",
     "def is_valid_move(grid1, grid2, start):\n",
     "    if is_contiguous(grid2, start) and is_one_change(grid1, grid2):\n",
