edit: updated is_one_change function to account for shapes with different number of rows

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -12,6 +12,7 @@
    "metadata": {},
    "source": [
     "## Validate game moves\n",
+    "### [Demo of the game:](https://www.youtube.com/watch?v=UIB1epCwv4k)\n",
     "### Four checks to validate the move:\n",
     "#### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
     "### For the new shape:\n",
@@ -339,7 +340,7 @@
     "    cols = len(grid[0])\n",
     "    visited = set()\n",
     "\n",
-    "    if sum(sum(row) for row in grid) != 10:  \n",
+    "    if sum(sum(row) for row in grid) == 10:  \n",
     "        def dfs(r, c):\n",
     "            if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or grid[r][c] == 0:\n",
     "                return 0\n",
