--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -17,7 +17,7 @@
     "#### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
     "### For the new shape:\n",
     "#### 2. Count to check that there are exactly 10 1's.\n",
-    "#### 3. Check to make sure the change results in a contiguous shape\n",
+    "#### 3.     If so, check to make sure the change results in a contiguous shape\n",
     "#### 4. Check that there was only one change between previous and new shape."
    ]
   },
@@ -318,14 +318,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -335,14 +335,14 @@
     "# Define a function to check continuity using DFS. Do not execute the search if the total number of 1s is not 10.\n",
     "# It takes in the 10x10 grid and the coordinates of a starting point on the shape.\n",
     "# If the count = 10, the function will return True, indicating that the move is valid.\n",
-    "def is_contiguous(grid, start):\n",
-    "    rows = len(grid)\n",
-    "    cols = len(grid[0])\n",
+    "def is_contiguous(shape, start):\n",
+    "    rows = len(shape)\n",
+    "    cols = len(shape[0])\n",
     "    visited = set()\n",
     "\n",
-    "    if sum(sum(row) for row in grid) == 10:  \n",
+    "    if sum(sum(row) for row in shape) == 10:  # Check if the total number of 1s is 10\n",
     "        def dfs(r, c):\n",
-    "            if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or grid[r][c] == 0:\n",
+    "            if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or shape[r][c] == 0:\n",
     "                return 0\n",
     "            visited.add((r, c))\n",
     "            count = 1 \n",
@@ -373,54 +373,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "# Define a function to check that there is exactly one change between the previous shape and the new shape.\n",
     "\n",
-    "def is_one_change(grid1, grid2):\n",
+    "def is_one_change(shape, next_shape):\n",
+    "    if len(shape) != len(next_shape): # Make the shapes have the same number of rows so you can compare them directly\n",
+    "        # For the shape with the fewer rows, add empty rows at the end\n",
+    "        if len(shape) < len(next_shape):\n",
+    "            shape += [[0] * len(shape[0]) for _ in range(len(next_shape) - len(shape))]\n",
+    "        else:\n",
+    "            next_shape += [[0] * len(next_shape[0]) for _ in range(len(shape) - len(next_shape))]\n",
+    "\n",
     "    count = 0\n",
-    "    for i in range(len(grid1)):\n",
-    "        for j in range(len(grid1[0])):\n",
-    "            if grid1[i][j] != grid2[i][j]:\n",
+    "    for i in range(len(shape)):\n",
+    "        for j in range(len(next_shape[0])):\n",
+    "            if shape[i][j] != next_shape[i][j]:\n",
     "                count += 1\n",
-    "    return count == 1\n",
+    "    return count == 2\n",
     "\n",
     "# Example usage:\n",
-    "grid1 = [\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 1, 1, 1, 1, 1, 1, 1],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "shape = [\n",
+    "    [1, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
-    "grid2 = [     \n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 1, 1, 1, 1, 1, 1, 0],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 1, 0],\n",
-    "    [0, 0, 0, 0, 1, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "next_shape = [     \n",
+    "    [0, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
-    "print(is_one_change(grid1, grid2)) "
+    "print(is_one_change(shape, next_shape)) "
    ]
   },
   {
@@ -437,9 +429,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "def is_valid_move(grid1, grid2, start):\n",
-    "    if is_contiguous(grid2, start) and is_one_change(grid1, grid2):\n",
-    "        return is_valid_square(grid1, start)\n",
+    "def is_valid_move(shape, next_shape): # Take in the shape and next_shape as 2D lists\n",
+    "    if is_contiguous(next_shape) and is_one_change(shape, next_shape):\n",
+    "        return is_valid_square(shape)\n",
     "    return False"
    ]
   },
