--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -335,12 +335,18 @@
     "# Define a function to check continuity using DFS. Do not execute the search if the total number of 1s is not 10.\n",
     "# It takes in the 10x10 grid and the coordinates of a starting point on the shape.\n",
     "# If the count = 10, the function will return True, indicating that the move is valid.\n",
-    "def is_contiguous(shape, start):\n",
+    "def is_contiguous(shape):\n",
     "    rows = len(shape)\n",
     "    cols = len(shape[0])\n",
     "    visited = set()\n",
     "\n",
     "    if sum(sum(row) for row in shape) == 10:  # Check if the total number of 1s is 10\n",
+    "        # Determine the starting point, which is the first 1 in the shape\n",
+    "        for r in range(rows):\n",
+    "            for c in range(cols):\n",
+    "                if shape[r][c] == 1:\n",
+    "                    start = (r, c)\n",
+    "                    break\n",
     "        def dfs(r, c):\n",
     "            if (r, c) in visited or not (0 <= r < rows and 0 <= c < cols) or shape[r][c] == 0:\n",
     "                return 0\n",
@@ -353,22 +359,12 @@
     "        return dfs(start[0], start[1]) == 10\n",
     "    return False\n",
     "# Example usage:\n",
-    "grid = [\n",
+    "shape = [\n",
+    "    [1, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 1, 1, 1, 1, 1, 1, 1],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
     "]\n",
-    "start = (1, 3)\n",
-    "print(is_contiguous(grid, start))  \n",
-    "    \n",
-    "# separate rule that sums the number of 1s in the grid\n"
+    "print(is_contiguous(shape))\n",
+    "    "
    ]
   },
   {
