update: combined functions into a single move validation function

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -13,12 +13,10 @@
    "source": [
     "## Validate game moves\n",
     "### [Demo of the game:](https://www.youtube.com/watch?v=UIB1epCwv4k)\n",
-    "### Four checks to validate the move:\n",
-    "#### 1. Check that the square is valid to move (it's not surrounded by other squares)\n",
-    "### For the new shape:\n",
-    "#### 2. Count to check that there are exactly 10 1's.\n",
-    "#### 3.     If so, check to make sure the change results in a contiguous shape\n",
-    "#### 4. Check that there was only one change between previous and new shape."
+    "### Three checks to validate the move:\n",
+    "#### 1. Count to check that there are exactly 10 1's.\n",
+    "#### 2.     If so, check to make sure the change results in a contiguous shape\n",
+    "#### 3. Check that there was only one change between previous and new shape."
    ]
   },
   {
@@ -271,53 +269,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Define a function to check that a square is valid to move.\n",
-    "# The function will take in the 10x10 grid and the coordinates of the square to be moved.\n",
-    "def is_valid_square(grid, coordinates):\n",
-    "    adjacent_squares = [\n",
-    "        coordinates[0] - 1, coordinates[1],\n",
-    "        coordinates[0] + 1, coordinates[1],\n",
-    "        coordinates[0], coordinates[1] - 1,\n",
-    "        coordinates[0], coordinates[1] + 1\n",
-    "    ]\n",
-    "\n",
-    "    if grid[coordinates[0]][coordinates[1]] == 1: # First check to make sure the coordinates correspond to a 1\n",
-    "        for pos in adjacent_squares: # If so, then check if any of the adjacent squares are 0\n",
-    "            if grid[adjacent_squares[0]][adjacent_squares[1]] == 0:\n",
-    "                return True\n",
-    "    return False\n",
-    "\n",
-    "# Example usage\n",
-    "grid = [\n",
-    "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-    "    [1, 0, 0, 1, 1, 1, 1, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-    "]\n",
-    "coordinates = (1,5)\n",
-    "print(is_valid_square(grid, coordinates)) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -369,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -391,17 +342,18 @@
     "        else:\n",
     "            next_shape += [[0] * len(next_shape[0]) for _ in range(len(shape) - len(next_shape))]\n",
     "\n",
-    "    count = 0\n",
-    "    for i in range(len(shape)):\n",
-    "        for j in range(len(next_shape[0])):\n",
-    "            if shape[i][j] != next_shape[i][j]:\n",
-    "                count += 1\n",
-    "    return count == 2\n",
+    "    change_count = 0\n",
+    "    for r in range(len(shape)):\n",
+    "        for c in range(len(shape[0])):\n",
+    "            if shape[r][c] != next_shape[r][c]:\n",
+    "                change_count += 1\n",
+    "    return change_count == 2  # Exactly one change (one removal and one addition)\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "shape = [\n",
-    "    [1, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
     "next_shape = [     \n",
     "    [0, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
@@ -420,15 +372,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def is_valid_move(shape, next_shape): # Take in the shape and next_shape as 2D lists\n",
     "    if is_contiguous(next_shape) and is_one_change(shape, next_shape):\n",
-    "        return is_valid_square(shape)\n",
-    "    return False"
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "# Example usage:\n",
+    "shape = [\n",
+    "    [0, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
+    "    [0, 1, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "]\n",
+    "\n",
+    "next_shape = [\n",
+    "    [1, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
+    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "]\n",
+    "\n",
+    "print(is_valid_move(shape, next_shape)) "
    ]
   },
   {
